--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "moment": "^2.29.1",
     "next": "latest",
     "next-auth": "^4.0.5",
-    "npm-windows-upgrade": "^6.0.1",
     "react": "17.0.1",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "17.0.1",
+    "react-hot-toast": "^2.2.0",
     "react-redux": "7.2.2",
     "react-responsive-carousel": "^3.2.22",
     "stripe": "^8.199.0"
